--- a/package.json
+++ b/package.json
@@ -14,12 +14,26 @@
     "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
   },
   "dependencies": {
+    "babel-plugin-styled-components": "^1.10.7",
     "gatsby": "^2.20.12",
+    "gatsby-image": "^2.3.2",
+    "gatsby-plugin-postcss": "^2.2.1",
+    "gatsby-plugin-prefetch-google-fonts": "^1.4.3",
+    "gatsby-plugin-purgecss": "^5.0.0",
+    "gatsby-plugin-sharp": "^2.5.4",
+    "gatsby-plugin-styled-components": "^3.2.1",
+    "gatsby-source-contentful": "^2.2.7",
+    "gatsby-source-filesystem": "^2.2.2",
+    "gatsby-transformer-sharp": "^2.4.4",
     "react": "^16.12.0",
-    "react-dom": "^16.12.0"
+    "react-dom": "^16.12.0",
+    "styled-components": "^5.1.0"
   },
   "devDependencies": {
-    "prettier": "^1.19.1"
+    "autoprefixer": "^9.7.6",
+    "cssnano": "^4.1.10",
+    "prettier": "^1.19.1",
+    "tailwindcss": "^1.2.0"
   },
   "repository": {
     "type": "git",
